# rust-notes

./: Cargo.toml  LICENSE  README.md
apps/orm-diesel/: .env  Cargo.toml  README.md
apps/orm-diesel/migrations/2024-04-26-191615_create_blueprint/: down.sql  up.sql
apps/orm-diesel/migrations/2024-04-29-045055_create_user/: down.sql  up.sql
apps/orm-diesel/migrations/2024-04-29-045057_create_posts/: down.sql  up.sql
apps/orm-diesel/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
apps/orm-diesel/src/api/: mod.rs  user.rs
apps/orm-diesel/src/model/: mod.rs  posts.rs  user.rs
apps/orm-diesel/src/repository/: mod.rs  user.rs
apps/orm-diesel/src/utils/: http.rs  macros.rs  mod.rs  time.rs
apps/orm-diesel/tests/: user_test.rs
crates/rust-config-macros/: Cargo.toml
crates/rust-config-macros/src/: lib.rs
crates/rust-config-macros/tests/: macro_test.rs
docs/: 概念.md  添加依赖.md
examples/: cmd_transform.rs  helloworld.rs  stu_actix_web.rs  stu_actix_web_db.rs  stu_actix_web_router.rs  stu_base64.rs  stu_cmd.rs  stu_datetime.rs  stu_ffmpeg.rs  stu_file.rs  stu_file_dir.rs  stu_file_path.rs  stu_filepath.rs  stu_http.rs  stu_http_async.rs  stu_http_spider.rs  stu_int.rs  stu_json.rs  stu_k8s.rs  stu_loop_dir.rs  stu_macro_rules.rs  stu_string.rs  stu_struct.rs  stu_symbol.rs  stu_sys_process.rs  stu_table_format.rs  stu_trait.rs  stu_yaml.rs
src/: lib.rs  main.rs
src/enums/: codes.rs  mod.rs  status.rs
src/k8s/: api.rs  mod.rs  models.rs
src/utils/: fake_structs.rs  json.rs  macros.rs  mod.rs
tests/: integration_test.rs  k8s_test.rs  utils_json_test.rs  utils_test.rs
