[package]
name = "rust-notes"
version = "0.1.0"
authors = ["tomoncle <1123431949@qq.com>"]
edition = "2018"

[features]
# 定义自己的 features, 自定义控制单元测试模块
default = []
local_runtime = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### hello world
ferris-says = "0.3.1"
### http 支持，
# 如果启用 blocking 模块，需要配置 features = ["blocking"],
# 如果启用自动解析 json 模块，需要配置 features = ["blocking", "json"]
reqwest = { version = "0.11.23", features = ["blocking", "json", "__rustls", "native-tls"] }
### 异步支持
tokio = { version = "1.35.1", features = ["full"] }
### json 解析, yaml 解析
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
### html 解析, soup 已经不维护了，转为 scraper
# soup = "0.5.1"
scraper = "0.18.1"
### 格式化输出
prettytable-rs = "^0.10"
### web 框架
actix-web = "4.4.0"
### database
diesel = { version = "2.1.4", features = ["sqlite", "mysql"] }
# diesel = { version = "2.1.4", features = ["sqlite"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
dotenv = "0.15.0"
### 视频处理
# ffmpeg = "0.3.0"
### 文件夹处理
walkdir = "2.4.0"
### cmd
clap = { version = "4.4.5", features = ["derive"] }
### datetime
chrono = "0.4.33"
dirs = "5.0.1"
### 系统进程
sysinfo = "0.30.5"
### k8s
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
secrecy = "0.8.0"
### base64
base64 = "0.21.7"
native-tls = "0.2.11"
