[package]
name = "orm-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres","chrono","time"] }
dotenvy = "0.15.7"
chrono = "0.4.34"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"