[package]
name = "orm-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.13.0"
diesel = { version = "2.1.4", features = ["postgres", "chrono", "time"] }
dotenvy = "0.15.7"
actix-web = "4.4.0"
reqwest = { version = "0.11.23", features = ["blocking", "json", "__rustls", "native-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
env_logger = "0.11.1"
log = "0.4.20"
chrono = "0.4.33"