[package]
name = "orm-diesel"
version = "0.1.0"
edition = "2021"

[features]
# 定义自己的 features, 自定义控制单元测试模块
default = []
local_runtime = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.13.0"
diesel = { version = "2.1.4", features = ["sqlite", "mysql", "postgres", "chrono", "time", "r2d2"] }
dotenvy = "0.15.7"
actix-web = "4.4.0"
reqwest = { version = "0.11.23", features = ["blocking", "json", "__rustls", "native-tls"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
env_logger = "0.11.1"
log = "0.4.20"
chrono = "0.4.33"
anyhow = "1.0.79"